@@ -55,8 +55,8 @@ static struct dbg_cmd_t COMMANDS[] = {
 	{ "kill", NULL, cmdfunc_kill, "Kill the debuggee." },
 	{ "quit", "q", cmdfunc_quit, "Quit iosdbg." },
 	{ "regs", NULL, NULL, NULL },
-	{ "regs float", NULL, cmdfunc_regsfloat, "Show a floating point register." },
-	{ "regs gen", NULL, cmdfunc_regsgen, "Show one or all general purpose registers." },
+	{ "regs float", NULL, cmdfunc_regsfloat, "Show a floating point register. Syntax:\n\tregs float <reg1 reg2 ...>\n\n\tYou can list as many floating point registers as you want." },
+	{ "regs gen", NULL, cmdfunc_regsgen, "Show general purpose registers. Syntax:\n\tregs gen {reg1 reg2 ...}\n\n\tThe argument is optional. All general purpose registers are dumped if there is no argument.\n\tYou can list as many general registers as you want." },
 	{ "set", NULL, cmdfunc_set, "Set the value of memory or a configuration variable for the debugger. Syntax:\n\tset (*offset|variable)=value\n\n\tYou must prefix an offset with '*'.\n\n\tIf you want your value to be intepreted as hex, use '0x'.\n\n\tPass --no-aslr to prevent ASLR from being added." },
 	{ "stepi", NULL, cmdfunc_stepi, "Step into the next instruction." },
 	{ "thread", NULL, NULL, NULL },
