@@ -1,3 +1,8 @@
+1-16-19
+- fix last command repeat functionality
+- proper floating point register viewing
+- the output when viewing registers is much nicer
+
 1-15-19
 - single stepping
 
